--- a/app/assets/stylesheets/css/shortcodes.css
+++ b/app/assets/stylesheets/css/shortcodes.css
@@ -427,7 +427,8 @@ blockquote {
 =========================================================*/
 .breadcrumbs {
 	padding:10px;
-	border:1px solid #e5e5e5;
+	/*border:1px solid #e5e5e5;*/
+	font-size:13px;
 	margin-bottom: 10px;
 }
 
