adicionando upload de imagens para o perfil do usuario

--- a/app/views/buildings/edit.html.erb
+++ b/app/views/buildings/edit.html.erb
@@ -14,12 +14,16 @@
 
     <%= form_for(@building, :html => { :class => "form-elements" }) do |f| %>
     <fieldset>
+        <%= f.label :condo_id, "Condomínio" %><br>
         <%= collection_select(:building, :condo_id, Condo.all, :id, :name, { :include_blank => 'Selecione seu condomínio' }, { :class => 'subscribe-text' }) %>
     </fieldset>
-
     <fieldset>
         <%= f.label :name, "Nome do bloco" %><br>
         <%= f.text_field :name, :placeholder => "ex: Bloco A", :class => 'span5' %>
+    </fieldset>
+    <fieldset>
+        <%= f.label :floor_qty, "Quantidade de andares" %><br>
+        <%= f.select :floor_qty, to_floor_qty_select(50), { :include_blank => 'Selecione' }, { :class => 'subscribe-text' } %>
     </fieldset>
     <br>
     <br>
