--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,34 +10,37 @@
         </div>
     <% end %>
 
-    <%= form_for(@user, :html => { :class => "form-elements" }) do |f| %>
+    <%= form_for(@user, :html => { :multipart => true, :class => "form-elements" }) do |f| %>
+        <fieldset>
+            <%= f.label :picture, "Foto do perfil" %>
+            <br>
+            <br>
+            <%= image_tag @user.picture_url(:thumb), :width => 50 if @user.picture? %>
+            <%= f.file_field :picture %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :email, "E-mail" %><br>
+            <%= f.text_field :email, :class => 'span5' %>
+        </fieldset>
 
-    <%= gravatar_for @user %><br>
-    <a href="http://gravatar.com/emails">alterar gravatar</a>
-    <br><br>
-    <fieldset>
-        <%= f.label :email, "E-mail" %><br>
-        <%= f.text_field :email, :class => 'span5' %>
-    </fieldset>
-
-    <fieldset>
-        <%= f.label :name, "Nome completo" %><br>
-        <%= f.text_field :name, :class => 'span5' %>
-    </fieldset>
-    <fieldset>
-        <%= f.label :cpf, "CPF" %><br>
-        <%= f.text_field :cpf, :class => 'span5' %>
-    </fieldset>
-    <fieldset>
-        <%= f.label :birthdate, "Data de nascimento" %><br>
-        <%= f.date_select :birthdate %>
-    </fieldset>
-    <fieldset>
-        <%= f.label :phone_number, "Telefone celular" %><br>
-        (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
-    </fieldset>
-    <br>
-    <br>
-    <%= f.submit "Salvar alterações", class: "button medium color" %>
+        <fieldset>
+            <%= f.label :name, "Nome completo" %><br>
+            <%= f.text_field :name, :class => 'span5' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :cpf, "CPF" %><br>
+            <%= f.text_field :cpf, :class => 'span5' %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :birthdate, "Data de nascimento" %><br>
+            <%= f.date_select :birthdate %>
+        </fieldset>
+        <fieldset>
+            <%= f.label :phone_number, "Telefone celular" %><br>
+            (<%= f.text_field :phone_area_code, :class => 'span1' %>) <%= f.text_field :phone_number, :class => 'span4' %>
+        </fieldset>
+        <br>
+        <br>
+        <%= f.submit "Salvar alterações", class: "button medium color" %>
     <% end %>
 </div>
