--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
                 <%= f.password_field :password_confirmation, :placeholder => "Confirme a senha", class: "subscribe-text", autocomplete: "off" %>
                 <br>
                 <br>
-                <%= f.submit "Oba! Criar conta", class: "subscribe-button" %>
+                <%= f.submit "Oba! Criar conta", class: "subscribe-button" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", root_url %>
 
             <% end %>
             <br>
