--- a/app/views/apartments/new.html.erb
+++ b/app/views/apartments/new.html.erb
@@ -28,6 +28,6 @@
     </fieldset>
     <br>
     <br>
-    <%= f.submit "Salvar dados", class: "button medium color" %> ou <%= link_to "cancelar", apartments_path %>
+    <%= f.submit "Salvar dados", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", apartments_path %>
     <% end %>
 </div>
