--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -27,6 +27,6 @@
     </fieldset>
     <br>
     <br>
-    <%= f.submit "Salvar dados", class: "button medium color" %> ou <%= link_to "cancelar", buildings_path %>
+    <%= f.submit "Salvar dados", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", buildings_path %>
     <% end %>
 </div>
