--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,7 +1,7 @@
 <head>
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Vivento | Condomínio Parc des Princes</title>
+	<title>Vivento</title>
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
