--- a/app/views/apartments/new.html.erb
+++ b/app/views/apartments/new.html.erb
@@ -15,7 +15,7 @@
     <%= form_for(@apartment, :html => { :class => "form-elements" }) do |f| %>
     <fieldset>
         <%= f.label :building_id, "Bloco" %><br>
-        <%= collection_select(:apartment, :building_id, Building.all, :id, :name, { :include_blank => 'Selecione o bloco' }, { :class => 'subscribe-text' }) %>
+        <%= collection_select(:apartment, :building_id, Building.find_all_by_condo_id(current_condo_id), :id, :name, { :include_blank => 'Selecione o bloco' }, { :class => 'subscribe-text' }) %>
     </fieldset>
     <fieldset>
         <%= f.label :floor, "Andar" %><br>
@@ -24,7 +24,7 @@
     </fieldset>
     <fieldset>
         <%= f.label :number, "Número do apartamento" %><br>
-        <%= f.text_field :number, :placeholder => "ex: 34 ou 34B", :class => 'span5' %>
+        <%= f.text_field :number, :placeholder => "ex: 34 ou 34B", :class => 'span2' %>
     </fieldset>
     <br>
     <br>
