--- a/app/assets/stylesheets/css/javascript.css
+++ b/app/assets/stylesheets/css/javascript.css
@@ -113,7 +113,7 @@
 	border:none;
 	text-indent:-999px;
 	background:url(http://themes.jozoor.com/crevision/white/images/icons/totop.png) no-repeat left top;
-	filter:alpha(opacity=80); /* IE patch */
+	filter:alpha(opacity:80); /* IE patch */
 	opacity:.8;
 }
 
@@ -195,7 +195,7 @@ html[xmlns] .slides{
 
 .flex-caption{
 	background:#333;
-	filter:alpha(opacity=80); /* IE patch */
+	filter:alpha(opacity:80); /* IE patch */
 	zoom:1;
 }
 
@@ -241,7 +241,7 @@ html[xmlns] .slides{
 
 .flex-direction-nav li .disabled{
 	opacity:.3;
-	filter:alpha(opacity=30);
+	filter:alpha(opacity:30);
 	cursor:default;
 }
 
@@ -287,7 +287,7 @@ html[xmlns] .slides{
 	top: 0px;
 	left: 0px;
 	z-index:999;
-	filter:alpha(opacity=80); /* IE patch */
+	filter:alpha(opacity:80); /* IE patch */
 	background: rgba(0,0,0,0.8);
 	color: #fff;
 	text-align: center;
@@ -323,7 +323,7 @@ html[xmlns] .slides{
 .ei-title h2, .ei-title h3{
 	text-align: right;
 	color:#fff;
-	filter:alpha(opacity=80); /* IE patch */
+	filter:alpha(opacity:80); /* IE patch */
 	background:#333333;
 	background: rgba(51,51,51,0.8);
 	line-height:25px;
@@ -387,12 +387,12 @@ html[xmlns] .slides{
     -o-transition: all 0.4s ease;
     -ms-transition: all 0.4s ease;
     transition: all 0.4s ease;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity:0)";
 }
 .ei-slider-thumbs li:hover img{
 	opacity: 1;
 	bottom: 10px;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity:100)";
 }
 
 
@@ -725,9 +725,9 @@ html[xmlns] .slides{
 
 #footer.thumbs li img { display: block; width: 96px; height: 75px; border:2px solid #505050;} /* updated */
 
-.thumbs li a img { border: none; opacity:.7; filter:alpha(opacity=70); /* IE patch */}
+.thumbs li a img { border: none; opacity:.7; filter:alpha(opacity:70); /* IE patch */}
 
-.thumbs li a:hover img { opacity:1; filter:alpha(opacity=100); /* IE patch */ }
+.thumbs li a:hover img { opacity:1; filter:alpha(opacity:100); /* IE patch */ }
 
 #cycle {
 	margin: 0;
