--- a/app/views/condos/show.html.erb
+++ b/app/views/condos/show.html.erb
@@ -12,7 +12,7 @@
     </p>
     <br>
     <p>
-      <%= format_address @address %>
+      <%= format_address @condo.address %>
     </p>
     <br>
     <p>
