--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,8 +20,7 @@
         </fieldset>
         <fieldset>
             <%= f.label :apartment_id, "Apartamento" %><br>
-            <%= @user.apartment.id %>
-
+            <%= collection_select(:user, :apartment_id, Apartment.all, :id, :number, { :include_blank => 'Selecione seu apartamento' }, { :class => 'subscribe-text' }) %>
         </fieldset>
         <fieldset>
             <%= f.label :email, "E-mail" %><br>
