organizando o fluxo de cadastro de users. separando o cadastro offline do cadastro autenticado

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <div id="under-construction">
+<div id="under-construction">
     <div class="container clearfix">
         <div class="sixteen columns">
 
@@ -22,7 +23,7 @@
 
             <% end %>
             <br>
-            <p>Já tem uma conta? <%= link_to "Ah, então vamos entrando...", signin_path %></p>
+            <p>Já tem uma conta? <%= link_to "Ah, então vamos entrando...", sign_in_path %></p>
 
         </div>
     </div>
