--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,9 +57,9 @@
 						</ul>
 					</li>
 					<% if signed_in? %>
-						<li><%= link_to "Sair", signout_path, method: "delete" %></li>
+						<li><%= link_to "Sair", sign_out_path, method: "delete" %></li>
 					<% else %>
-						<li><%= link_to "Entrar", signin_path %></li>
+						<li><%= link_to "Entrar", sign_in_path %></li>
 					<% end %>
 				</ul>
 
