adding elevator wall concept, barely listing and creating

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,7 @@
 								<li><%= link_to "Gerenciar condomínios", condos_path %></li>
 								<li><%= link_to "Gerenciar blocos", buildings_path %></li>
 								<li><%= link_to "Gerenciar apartamentos", apartments_path %></li>
+								<li><%= link_to "Parede do Elevador", :controller => "elevator_wall", :action => "index" %></li>
 							</ul>
 						</li>
 					<% end %>
